cluster/apps/code-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: code-server
spec:
  ports:
  - name: http
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: code-server
  type: ClusterIP
